[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/school_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/tutorial.gd" type="Script" id=4]
[ext_resource path="res://scenes/weapon_buttons.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/power_ups.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/music/gameover.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/fonts/dogica/OTF/dogicapixel.otf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="tutorial" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="SchoolBackground" parent="." instance=ExtResource( 1 )]
__meta__ = {
"_edit_horizontal_guides_": [ 6384.0 ],
"_edit_vertical_guides_": [  ]
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 540, 1112 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Explanation1" type="ColorRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 161.0
margin_top = 1212.0
margin_right = 501.0
margin_bottom = 1284.0

[node name="Label" type="Label" parent="Explanation1"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 68.0
margin_top = 24.0
margin_right = 172.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
text = "Press 1 to swing"

[node name="ColorRect" type="ColorRect" parent="Explanation1/Label"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 21.0
margin_top = 31.5
margin_right = 93.0
margin_bottom = 100.5

[node name="Explanation2" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 292.0
margin_top = 1212.0
margin_right = 632.0
margin_bottom = 1284.0

[node name="Label" type="Label" parent="Explanation2"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 68.0
margin_top = 24.0
margin_right = 172.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
text = "Press 2 to block"

[node name="ColorRect" type="ColorRect" parent="Explanation2/Label"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 20.5
margin_top = 31.0
margin_right = 92.5
margin_bottom = 100.0

[node name="Explanation3" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 462.0
margin_top = 1173.0
margin_right = 712.0
margin_bottom = 1283.0

[node name="Label" type="Label" parent="Explanation3"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 5.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
text = "Press 3 to use sponge and clear all rats"
align = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="Explanation3/Label"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 32.0
margin_top = 59.0
margin_right = 104.0
margin_bottom = 128.0

[node name="Explanation4" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 591.0
margin_top = 1173.0
margin_right = 896.0
margin_bottom = 1283.0

[node name="Label" type="Label" parent="Explanation4"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 17.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
text = "Press 4 to use first aid kit and replenish your health"
align = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="Explanation4/Label"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 26.0
margin_top = 59.5
margin_right = 98.0
margin_bottom = 128.5

[node name="Explanation5" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 372.0
margin_top = 489.0
margin_right = 677.0
margin_bottom = 599.0

[node name="Label" type="Label" parent="Explanation5"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 17.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
text = "Press the arrow keys to move side to side and dodge"
align = 1
autowrap = true

[node name="power_ups" parent="." instance=ExtResource( 6 )]
position = Vector2( 548, 920 )
scale = Vector2( 0.7, 0.7 )

[node name="weapon_buttons" parent="." instance=ExtResource( 5 )]
position = Vector2( 288, 920 )
scale = Vector2( 0.7, 0.7 )

[node name="BossSpawnPoint" type="Position2D" parent="."]
position = Vector2( 540, 96 )

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="WaitTime" type="Timer" parent="."]
wait_time = 1.5

[node name="good_luck" type="Label" parent="."]
margin_left = 416.0
margin_top = 672.0
margin_right = 660.0
margin_bottom = 735.0
custom_fonts/font = SubResource( 2 )
text = "Good Luck!"

[connection signal="boss_is_spawned" from="." to="Player" method="_on_main_boss_is_spawned"]
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="update_first_aid_count" from="Player" to="power_ups" method="_on_Player_update_first_aid_count"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="first_aid" from="power_ups" to="Player" method="_on_power_ups_first_aid"]
[connection signal="sponge" from="power_ups" to="power_ups" method="_on_power_ups_sponge"]
[connection signal="block" from="weapon_buttons" to="Player" method="_on_weapon_buttons_block"]
[connection signal="swing" from="weapon_buttons" to="Player" method="_on_weapon_buttons_swing"]
[connection signal="timeout" from="WaitTime" to="." method="_on_WaitTime_timeout"]
